# simon_cadge_klu_ai_be_exercise

./: Cargo.toml  README.md
src/: http_parsing.rs  json_parsing.rs  lib.rs
